--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Sudoku Solver</title>
-  </head>
-  <body>
-    <div id="puzzle"></div>
-    <button id="solve">solve</button>
 
-    <script src="index.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Solve your Sudoku">
+
+  <title>Sudoku Solver</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <link href="styles.css" rel="stylesheet">
+</head>
+
+<body class="text-center">
+  <main class="form-sudoku">
+    <h1 class="h3 mb-3 fw-normal">Sudoku Solver</h1>
+    <br />
+    <div class="row justify-content-center">
+      <div class="col-auto">
+        <table id="sudokuTable">
+        </table>
+      </div>
+    </div>
+    <br />
+    <button id="solve" class="btn btn-lg btn-primary" type="button">Solve</button>
+  </main>
+</body>
+
+<script src="index.js"></script>
+
 </html>
